syntax = "proto3";
package squad.claim.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "squad/claim/v1beta1/claim.proto";

option go_package = "github.com/cosmosquad-labs/squad/x/claim/types";

// Query defines the gRPC querier service.
service Query {
  // ClaimRecord returns the claim record for the recipient address.
  rpc ClaimRecord(QueryClaimRecordRequest) returns (QueryClaimRecordResponse) {
    option (google.api.http).get = "/squad/claim/v1beta1/{airdrop_id}/claim_record/{address}";
  }
}

// QueryClaimRecordRequest is request type for the Query/ClaimRecord RPC method.
message QueryClaimRecordRequest {
  uint64 airdrop_id = 1;

  string address = 2;
}

// QueryClaimRecordResponse is response type for the Query/ClaimRecord RPC method.
message QueryClaimRecordResponse {
  ClaimRecord claim_record = 1 [(gogoproto.nullable) = false];
}